Removed about.Rms, edited Index.Rmd, and build website on RMarkdown to create html, added nojekyll file

--- a/_site.yml
+++ b/_site.yml
@@ -2,7 +2,7 @@ name: "simonijain"
 navbar:
   title:
   left:
-    - text: Home
+    - text: About
       href: index.html
     - text: Research
       href: research.html
@@ -18,5 +18,6 @@ navbar:
 output:
   html_document:
     highlight: textmate
-  theme: cosmo
 css: styles.css
+output_dir: docs
+
